--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -22,7 +22,7 @@ background-color: green;
     border: 5px solid yellow;
     position: fixed;
     top: 60px;
-    left: 1250px;
+    left: 1300px;
 }
 
 .dealer_area {
@@ -39,6 +39,48 @@ background-color: green;
     height: 400px;
     border: 5px dotted yellow;
     position: fixed;
-    top: 60px;
+    top: 500px;
     left: 100px;
 }
+
+#deal_btn {
+    width:  300px;
+    height: 50px;
+    color:  black;
+    background-color: yellow;
+    position: bixed;
+    top: 500px;
+    left: 1300px;
+    border: 2px solid black;
+}
+
+#hit_btn {
+    width:  300px;
+    height: 50px;
+    color:  black;
+    background-color: yellow;
+    position: fied;
+    top: 600px;
+    left: 1300px;
+    border: 2px solid black;
+}
+
+#stand_btn {
+    width:  300px;
+    height: 50px;
+    color:  black;
+    background-color: yellow;
+    position: fixed;
+    top: 700px;
+    left: 1300px;
+    border: 2px solid black;
+}
+
+
+
+
+
+
+
+
+
