--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -43,6 +43,11 @@ background-color: green;
     left: 100px;
 }
 
+.playerscard {
+    width: 200px;
+    height: 300px;
+}
+
 #deal_btn {
     width:  300px;
     height: 50px;
