updated number of cards shown in player area

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -41,11 +41,12 @@ background-color: green;
     position: fixed;
     top: 500px;
     left: 100px;
+    display:flex;
 }
 
 .playerscard {
-    width: 200px;
-    height: 300px;
+    width: 247px;
+    height: 384px;
 }
 
 #deal_btn {
