--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -60,6 +60,22 @@ background-color: green;
     border: 2px solid black;
 }
 
+.score_player {
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    background-color: white;
+    color: black;
+}
+
+.game_over {
+    width: 300px;
+    height: 300px;
+    font-size: 20px;
+    background-color: white;
+    color: red;
+}
+
 #hit_btn {
     width:  300px;
     height: 50px;
